# ecr-scan-action

./: .gitignore  Makefile  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: __main__.py  constants.py  scan.py  utils.py
tests/: conftest.py  smoke_test.py  test_github_actions.py  test_main.py  test_scan.py
