[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecr-scanning-action"
version = "0.0.1"
description = "AWS ECR Image Scanner"
urls = {source = "https://github.com/vonsteer/ecr-scan-action"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ecr", "aws", "action", "github", "vulnerabilities", "security", "scanning"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3==1.35.76",
    "pydantic==2.10.3",
    "rich==13.9.4"
]

[project.scripts]
ecr-scan = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[dependency-groups]
dev = [
    "ruff==0.11.6",
    "pyright==1.1.399",
    "pre-commit==4.2.0",
    "genbadge[coverage]",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.24.0",
    "pytest-cov~=6.1.1",
]


[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:"
]

[tool.pytest-cov]
cov = ["src"]
cov-report = ["term-missing", "xml", "html"]

